# pilz_fair_revpi

./: CMakeLists.txt  README.md  package.xml
configs/: nav2_params.yaml
configs/navigation/amcl/: amcl.launch.py  amcl_config.yaml
configs/navigation/nav2/: bt_navigator.yaml  nav2.launch.py  recovery.yaml
configs/robot_description/: robot_description.launch.py
launch/: display_amv.launch.py  fair.launch.py
maps/: neo_track1.yaml
scripts/: nav_waypoints_follower.py  odom.py
src/: shared_memory copy.cpp  shared_memory.cpp
urdf/: amv.urdf.xacro
urdf/xacros/: base.xacro  caster_wheel.xacro  psen_scan.xacro  wheel_left.xacro  wheel_right.xacro
